Modified index.html file on dev branch

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 	<title>My Git Connect Demo Activity</title>
 </head>
 <body>
-	<hi>Hello Git World!</h1>
+	<hi>Hello Git World, I made it!</h1>
 </body>
 </html>
